# portpilot

./: Cargo.toml  GAP_ANALYSIS.md  README.md
src/: cli.rs  filter.rs  lib.rs  main.rs  sort.rs  watch.rs
src/output/: human.rs  json.rs  mod.rs  oneline.rs
src/process/: info.rs  kill.rs  mod.rs
src/scanner/: linux.rs  macos.rs  mod.rs  types.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: cli_tests.rs  filter_tests.rs  integration_tests.rs  output_tests.rs  scanner_tests.rs
