[package]
name = "portpilot"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI tool for inspecting and managing ports"
license = "MIT"
authors = ["Katie"]
keywords = ["port", "network", "process", "cli", "tui"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "portpilot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
ratatui = "0.28"
crossterm = "0.28"
sysinfo = "0.31"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
